--- a/handebol.html
+++ b/handebol.html
@@ -25,9 +25,17 @@
                 text-align: center;
             }
 
-            #volei {
+            #propa {
+                width: 300px;
+                height: 300px;
+                display: inline-block;
+                background-image: url(Imagens/propagandas/propaganda-coca.gif);
+                background-size: 400px 400px;
+                text-decoration: none;
+                border-radius: 15px;
+                margin-left: 50px;
                 margin-top: 20px;
-                padding-left: 40px;
+                padding-left: 20px;
             }
 
             div#texto {
@@ -46,31 +54,106 @@
                 width: 300px;
                 height: 300px;
                 display: inline-block;
-                background-image: url("Imagens/propagandas/propaganda-coca.gif");
+                background-image: url(Imagens/propagandas/propaganda-coca.gif);
                 background-size: 400px 400px;
                 text-decoration: none;
                 border-radius: 15px;
-                margin-left: 180px;
+                margin-left: 100px;
             }
 
             #propa1 {
                 width: 400px;
                 height: 400px;
                 display: inline-block;
-                background-image: url("Imagens/propagandas/propaganda-coca.gif");
+                background-image: url(Imagens/propagandas/propaganda-coca.gif);
                 background-size: 500px 500px;
                 text-decoration: none;
                 margin-left: 120px;
             }
 
             #propa3 {
-                width: 600px;
+                width: 700px;
                 height: 400px;
                 display: inline-block;
-                background-size: 700px 500px;
                 text-decoration: none;
-                margin-left: 120px;
-                padding-left: 300px;
+                background-image: url(Imagens/propagandas/propaganda-coca.gif);
+                background-size: 800px 600px;
+                margin-left: 150px;
+            }
+
+            @media screen and (max-width: 856px) {
+                #texto {
+                    padding-left: 70px;
+                    text-align: left;
+                    font-size: 20px;
+                    color: #000000;
+                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+                }
+
+                main#conteudo {
+                    display: grid;
+                    grid-template-columns: 1000px;
+                    padding-left: 200px;
+                    background-color: aliceblue;
+                    text-align: center;
+                }
+
+                #propa {
+                    width: 300px;
+                    height: 300px;
+                    display: inline-block;
+                    background-image: url(Imagens/propagandas/propaganda-coca.gif);
+                    background-size: 400px 400px;
+                    text-decoration: none;
+                    border-radius: 15px;
+                    margin-left: 50px;
+                    margin-top: 20px;
+                    padding-left: 20px;
+                }
+
+                div#texto {
+                    text-align: left;
+                    display: grid;
+                    grid-template-columns: 400px auto;
+                    padding-left: 100px;
+                    background-color: aliceblue;
+                    font-size: 20px;
+                    color: #000000;
+                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                    margin-bottom: 15px;
+                }
+
+                #propa2 {
+                    width: 300px;
+                    height: 300px;
+                    display: inline-block;
+                    background-image: url(Imagens/propagandas/propaganda-coca.gif);
+                    background-size: 400px 400px;
+                    text-decoration: none;
+                    border-radius: 15px;
+                    margin-left: 100px;
+                }
+
+                #propa1 {
+                    width: 400px;
+                    height: 400px;
+                    display: inline-block;
+                    background-image: url(Imagens/propagandas/propaganda-coca.gif);
+                    background-size: 500px 500px;
+                    text-decoration: none;
+                    margin-left: 120px;
+                }
+
+                #propa3 {
+                    width: 700px;
+                    height: 400px;
+                    display: inline-block;
+                    text-decoration: none;
+                    background-image: url(Imagens/propagandas/propaganda-coca.gif);
+                    background-size: 800px 600px;
+                    margin-left: 150px;
+                }
             }
         </style>
     </head>
@@ -84,8 +167,6 @@
         <ul id="menu">
             <li id="A2"><a id="A3" href="volei.html"><b>VOLÊI</b></a></li>
             <li id="A2"><a id="A3" href="basquete.html"><b>BASQUETE</b></a></li>
-            <li id="A2"><a id="A3" href="fultebol.html"><b>FUTEBOL</b></a></li>
-            <li id="A2"><a id="A3" href="handebol.html"><b>HANDEBOL</b></a></li>
             <li id="A2"><a id="A3" href="index.html"><b>HOME</b></a></li>
         </ul>
         <img src="Imagens/banner1.png" alt="banner" id="banner">
@@ -101,7 +182,7 @@
                         (7). Os colégios têm até esta quarta-feira (9), para ingressarem no torneio desde ano. Do total,
                         12 dos times vão jogar o campeonato masculino. As demais entram em quadra pela
                         categoria feminino.</p>
-                    <img src="Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="volei">
+                    <a href="https://www.cocacolabrasil.com.br/inicial" alt="COCA" id="propa"></a>
                 </div>
                 <img src="Imagens/noticias/handebol1.webp" alt="handebol"
                     style="margin-top: 30px; margin-bottom: 10px; padding-left: 50px;">
@@ -109,36 +190,45 @@
                     Kennedy, Carmo, Liceu São Paulo, Jean Piaget, Átrio, Integração, Universitas, Novo Tempo e Objetivo
                     Praia Grande, além da UME Professor Doutor Luiz Pieruzzi Netto, da EM Albert Einstein e da EM
                     Governador Franco Montoro.</p>
-                <img src="Imagens/propagandas/propaganda-coca.gif" alt="coca" id="propa3">
+                <a href="https://www.cocacolabrasil.com.br/inicial" alt="coca" id="propa3"></a>
+                <p id="texto">Já entre as garotas, disputarão o título os colégios Presidente Kennedy, Liceu São Paulo,
+                    Jean Piaget, Integração, Universitas e Novo Tempo, bem como EMEF Antonio Pacífico, UME Professor
+                    Doutor Luiz Pieruzzi Netto, UE Professora Laura Filgueiras, EM Professora Maria Aparecida de Araújo,
+                    EM Albert Einstein e EM Governador Franco Montoro.
+
+                </p>
                 <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                ;"><b>Domínio no 2º set</b></h1>
+                ;"><b>Inscrições</b></h1>
                 <div id="texto">
-                    <p>Diferentemente do primeiro set, o Brasil
-                        iniciou a segunda parcial melhor em quadra, fazendo 5 a 2.
-                        Pouco depois, Gabi soltou o braço, ampliando para 9 a 5. Estava fácil. Após levantamento
-                        perfeito de
-                        Roberta, Thaísa colocou a bola no chão, marcando 17 a 10. Numa largadinha de Kisy, o placar foi
-                        a 22
-                        a 14. A partir de então, coube ao Brasil controlar a partida até fechar o set em 25 a 16.</p>
-                    <img src="Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="propa2">
+                    <p>Das instituições educacionais que desejarem entrar na Copa precisam encaminhar seus
+                        representantes à Liga Regional de Futebol de Salão do Litoral Paulista, situada à Avenida Doutor
+                        Carvalho de Mendonça, 243, no Marapé, em Santos, das 15 às 18 horas, para efetivar a inscrição
+                        (imprima e preencha a ficha). No local, eles terão de apresentar um ofício, solicitando a
+                        inclusão na competição. Além disso, as escolas privadas têm de doar 20 latas (não pode ser
+                        pacote) de leite em pó, e as públicas, oito.</p>
+                    <a href="https://www.cocacolabrasil.com.br/inicial" alt="COCA" id="propa2"></a>
                 </div>
-                <img src="Imagens/noticias/volei3.webp" alt="volei" style="padding-left: 50px;">
-                <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                ;"><b>Argentina tenta reagir</b></h1>
-                <div id="texto">
-                    <p>A Argentina voltou melhor para o terceiro set, impondo dificuldades ao Brasil. Num erro de ataque
-                        de Gabi, as hermanas fizeram 5 a 3. Instantes depois foi a vez de Júlia Bergmann atacar para
-                        fora. Zé Roberto pediu desafio, e a arbitragem pegou um leve toque no bloqueio. Ponto das
-                        brasileiras, que diminuíram para 6 a 5. O empate do Brasil só foi acontecer quando Thaísa fez 8
-                        a 8. A virada veio com Kisy, que marcou
-                        12 a 11. A Argentina sentiu o golpe e, minutos depois, Erika Mercado parou no bloqueio
-                        brasileiro: 16 a 13. Sem forças para reagir, a seleção visitante viu o Brasil fazer 21 a 15 num
-                        ponto de Carol. Com a vitória mais que encaminhada, o time verde-amarelo tratou de fechar a
-                        partida em 25 a 17.
-                    </p>
-                    <img src="Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="propa1">
-                </div>
-                <img src="Imagens/noticias/volei4.webp" alt="volei" style="padding-left: 50px; margin-bottom: 10px;">
+                <p id="texto">O torneio vai de 16 de setembro a 7 de outubro. Vão jogar, em ambas as categorias, atletas
+                    nascidos entre 2009 e 2012.
+                </p>
+                <br>
+                <p id="texto">Depois do fechamento das inscrições, acontece o Congresso Técnico, em que serão definidos
+                    os grupos do campeonato. O evento ocorre na próxima segunda (14), às 18 horas, no prédio do Grupo
+                    Tribuna, em Santos.
+                </p>
+                <br>
+                <p id="texto">A Copa TV Tribuna de Handebol Escolar é um evento realizado pela TV Tribuna, afiliada
+                    Globo na Baixada Santista e Vale do Ribeira e organizado pela Associação Nacional de Esportes com
+                    apoio da secretaria de Esportes da Prefeitura Municipal de Santos.
+
+                </p>
+                <a href="https://www.cocacolabrasil.com.br/inicial" alt="coca" id="propa3"></a>
+
+                <p id="texto">O objetivo é estimular a prática do esporte, contextualizado como instrumento de educação,
+                    promovendo a melhora da qualidade de vida, a integração, o intercâmbio social e esportivo e a
+                    confraternização dos estudantes, possibilitando o surgimento de novos valores na modalidade, bem
+                    como difundir e desenvolver a sua prática na região.
+                </p>
             </main>
         </section>
         <div id="rodap">
