--- a/volei.html
+++ b/volei.html
@@ -62,6 +62,64 @@
                 border-radius: 15px;
                 margin-left: 120px;
             }
+
+            @media screen and (max-width: 856px) {
+                #texto {
+                    padding-left: 1%;
+                    text-align: left;
+                    font-size: 20px;
+                    color: #000000;
+                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+                }
+
+                main#conteudo {
+                    text-align: center;
+                    display: grid;
+                    grid-template-columns: 1000px;
+                    padding-left: 200px;
+                    background-color: #CEF7FA;
+                    text-align: center;
+                }
+
+                #volei {
+                    margin-top: 20px;
+                    padding-left: 40px;
+                }
+
+                div#texto {
+                    text-align: left;
+                    display: grid;
+                    grid-template-columns: auto;
+                    background-color: #CEF7FA;
+                    font-size: 20px;
+                    color: #000000;
+                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                    margin-bottom: 15px;
+                }
+
+                #propa2 {
+                    width: 300px;
+                    height: 300px;
+                    display: inline-block;
+                    background-image: url("Imagens/propagandas/propaganda-coca.gif");
+                    background-size: 300px 300px;
+                    text-decoration: none;
+                    border-radius: 15px;
+                    margin-left: 180px;
+                }
+
+                #propa1 {
+                    width: 400px;
+                    height: 200px;
+                    display: inline-block;
+                    background-image: url("Imagens/propagandas/propaganda-coca.gif");
+                    background-size: 400px 300px;
+                    text-decoration: none;
+                    border-radius: 15px;
+                    margin-left: 100px;
+                }
+            }
         </style>
     </head>
 
@@ -72,9 +130,7 @@
             </section>
         </div>
         <ul id="menu">
-            <li id="A2"><a id="A3" href="volei.html"><b>VOLÊI</b></a></li>
             <li id="A2"><a id="A3" href="basquete.html"><b>BASQUETE</b></a></li>
-            <li id="A2"><a id="A3" href="fultebol.html"><b>FUTEBOL</b></a></li>
             <li id="A2"><a id="A3" href="handebol.html"><b>HANDEBOL</b></a></li>
             <li id="A2"><a id="A3" href="index.html"><b>HOME</b></a></li>
         </ul>
@@ -87,7 +143,7 @@
                         aberto, na
                         Arena de Verona</b> </p>
                 <br>
-                <div id="texto" style="padding-left: 80px;">
+                <div id="texto" >
                     <p>O Brasil segue com uma campanha irrepreensível no Sul-Americano Feminino, última competição antes
                         do
                         Pré-Olímpico em setembro, no Japão. Depois de estrear vencendo o Chile, a equipe do técnico José
@@ -97,7 +153,7 @@
                         Brasil</p>
                     <img src="Imagens/noticias/volei.gif" alt="gif" id="volei">
                 </div>
-                <img src="Imagens/noticias/volei2.webp" alt="volei"
+                <img src="Imagens/noticias/volei2.webp" alt="volei" id="volei2"
                     style="margin-top: 30px; margin-bottom: 10px; padding-left: 50px;">
                 <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 ;"><b>Domínio no 2º set</b></h1>
@@ -109,24 +165,25 @@
                         Roberta, Thaísa colocou a bola no chão, marcando 17 a 10. Numa largadinha de Kisy, o placar foi
                         a 22
                         a 14. A partir de então, coube ao Brasil controlar a partida até fechar o set em 25 a 16.</p>
-                    <img src="Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="propa2">
+                    <a href="https://www.cocacolabrasil.com.br/inicial" alt="COCA" id="propa2"></a>
                 </div>
-                <img src="Imagens/noticias/volei3.webp" alt="volei" style="padding-left: 50px;">
+                <img src="Imagens/noticias/volei3.webp" alt="volei" id="volei2" style="padding-left: 50px;">
                 <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 ;"><b>Argentina tenta reagir</b></h1>
                 <div id="texto">
                     <p>A Argentina voltou melhor para o terceiro set, impondo dificuldades ao Brasil. Num erro de ataque
                         de Gabi, as hermanas fizeram 5 a 3. Instantes depois foi a vez de Júlia Bergmann atacar para
                         fora. Zé Roberto pediu desafio, e a arbitragem pegou um leve toque no bloqueio. Ponto das
-                        brasileiras, que diminuíram para 6 a 5. O empate do Brasil só foi acontecer quando Thaísa fez 8 a 8. A virada veio com Kisy, que marcou
-                    12 a 11. A Argentina sentiu o golpe e, minutos depois, Erika Mercado parou no bloqueio
-                    brasileiro: 16 a 13. Sem forças para reagir, a seleção visitante viu o Brasil fazer 21 a 15 num
-                    ponto de Carol. Com a vitória mais que encaminhada, o time verde-amarelo tratou de fechar a
-                    partida em 25 a 17.
+                        brasileiras, que diminuíram para 6 a 5. O empate do Brasil só foi acontecer quando Thaísa fez 8
+                        a 8. A virada veio com Kisy, que marcou
+                        12 a 11. A Argentina sentiu o golpe e, minutos depois, Erika Mercado parou no bloqueio
+                        brasileiro: 16 a 13. Sem forças para reagir, a seleção visitante viu o Brasil fazer 21 a 15 num
+                        ponto de Carol. Com a vitória mais que encaminhada, o time verde-amarelo tratou de fechar a
+                        partida em 25 a 17.
                     </p>
-                    <img src="Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="propa1">
+                    <a href="https://www.cocacolabrasil.com.br/inicial" alt="COCA" id="propa1"></a>
                 </div>
-                <img src="Imagens/noticias/volei4.webp" alt="volei" style="padding-left: 50px; margin-bottom: 10px;">
+                <img src="Imagens/noticias/volei4.webp" alt="volei" id="volei2" style="padding-left: 50px; margin-bottom: 10px;">
             </main>
         </section>
         <div id="rodap">
