--- a/basquete.html
+++ b/basquete.html
@@ -5,149 +5,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="CSS/basquete.css">
+        <link rel="shortcut icon" href="Imagens/esportes-com-bolas.png" type="image/x-icon">
         <title>JORNAL ESPORTIVO:</title>
-        <style>
-            #texto {
-                padding-left: 70px;
-                text-align: left;
-                font-size: 20px;
-                color: #000000;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
-            }
-
-            main#conteudo {
-                display: grid;
-                grid-template-columns: 1000px;
-                padding-left: 200px;
-                background-color: aliceblue;
-                text-align: center;
-            }
-
-            #volei {
-                margin-top: 20px;
-                padding-left: 40px;
-            }
-
-            div#texto {
-                text-align: left;
-                display: grid;
-                grid-template-columns: 400px auto;
-                padding-left: 100px;
-                background-color: aliceblue;
-                font-size: 20px;
-                color: #000000;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                margin-bottom: 15px;
-            }
-
-            #propa2 {
-                width: 300px;
-                height: 300px;
-                display: inline-block;
-                background-image: url("Imagens/propagandas/propaganda-coca.gif");
-                background-size: 400px 400px;
-                text-decoration: none;
-                border-radius: 15px;
-                margin-left: 180px;
-            }
-
-            #propa1 {
-                width: 400px;
-                height: 400px;
-                display: inline-block;
-                background-image: url("Imagens/propagandas/propaganda-coca.gif");
-                background-size: 500px 500px;
-                text-decoration: none;
-                border-radius: 15px;
-                margin-left: 120px;
-            }
-
-            #propa {
-                width: 300px;
-                height: 300px;
-                display: inline-block;
-                background-image: url(Imagens/propagandas/propaganda-coca.gif);
-                background-size: 400px 400px;
-                text-decoration: none;
-                border-radius: 15px;
-                margin-left: 50px;
-                margin-top: 20px;
-                padding-left: 20px;
-            }
-
-            @media screen and (max-wdth: 856px) {
-                #texto {
-                    padding-left: 70px;
-                    text-align: left;
-                    font-size: 20px;
-                    color: #000000;
-                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
-                }
-
-                main#conteudo {
-                    display: grid;
-                    grid-template-columns: 1000px;
-                    padding-left: 200px;
-                    background-color: aliceblue;
-                    text-align: center;
-                }
-
-                #volei {
-                    margin-top: 20px;
-                    padding-left: 40px;
-                }
-
-                div#texto {
-                    text-align: left;
-                    display: grid;
-                    grid-template-columns: 400px auto;
-                    padding-left: 100px;
-                    background-color: aliceblue;
-                    font-size: 20px;
-                    color: #000000;
-                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                    margin-bottom: 15px;
-                }
-
-                #propa2 {
-                    width: 300px;
-                    height: 300px;
-                    display: inline-block;
-                    background-image: url("Imagens/propagandas/propaganda-coca.gif");
-                    background-size: 400px 400px;
-                    text-decoration: none;
-                    border-radius: 15px;
-                    margin-left: 180px;
-                }
-
-                #propa1 {
-                    width: 400px;
-                    height: 400px;
-                    display: inline-block;
-                    background-image: url("Imagens/propagandas/propaganda-coca.gif");
-                    background-size: 500px 500px;
-                    text-decoration: none;
-                    border-radius: 15px;
-                    margin-left: 120px;
-                }
-
-                #propa {
-                    width: 300px;
-                    height: 300px;
-                    display: inline-block;
-                    background-image: url(Imagens/propagandas/propaganda-coca.gif);
-                    background-size: 400px 400px;
-                    text-decoration: none;
-                    border-radius: 15px;
-                    margin-left: 50px;
-                    margin-top: 20px;
-                    padding-left: 20px;
-                }
-            }
-        </style>
     </head>
 
     <body id="body">
@@ -161,9 +21,9 @@
             <li id="A2"><a id="A3" href="handebol.html"><b>HANDEBOL</b></a></li>
             <li id="A2"><a id="A3" href="index.html"><b>HOME</b></a></li>
         </ul>
-        <img src="Imagens/banner1.png" alt="banner" id="banner">
+        <img src="CSS/Imagens/banner1.png" alt="banner" id="banner">
         <section>
-            <link rel="shortcut icon" href="Imagens/belas-artes-fotor-20230614204542.png" type="image/x-icon" />
+            <link rel="shortcut icon" href="CSS/Imagens/belas-artes-fotor-20230614204542.png" type="image/x-icon" />
             <main id="conteudo">
                 <h1 id="tlt" style="padding-left: 80px;"><b>São José busca reabilitação no Paulista de Basquete em duelo
                         contra Mogi</b></h1>
@@ -173,7 +33,7 @@
                     desta
                     quinta-feira, 24. Às 20h, os joseenses visitam o Mogi, no ginásio Hugo Ramos. A equipe vem de
                     duas derrotas seguidas no estadual.</p>
-                <img src="Imagens/noticias/basquete1.webp" alt="volei"
+                <img src="CSS/Imagens/noticias/basquete1.webp" alt="volei"
                     style="margin-top: 30px; margin-bottom: 10px; padding-left: 50px;">
                 <p id="texto"> As duas derrotas foram para Osasco e Franca, ambas no ginásio Linneu de Moura. Em quatro
                     partidas disputadas, são três derrotas e uma vitória. A campanha é a mesma do Mogi.</p>
@@ -190,9 +50,8 @@
                         atuaram no duelo contra o Franca, são dúvidas para o jogo diante dos mogianos.</p>
                     <a href="https://www.cocacolabrasil.com.br/inicial" alt="COCA" id="propa2"></a>
                 </div>
-                <img src="Imagens/noticias/basquete2.webp" alt="volei" style="padding-left: 50px;">
-                <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                ;"><b>Argentina tenta reagir</b></h1>
+                <img src="CSS/Imagens/noticias/basquete2.webp" alt="volei" style="padding-left: 50px;">
+                <h1 id="tlt"><b>Argentina tenta reagir</b></h1>
                 <div id="texto">
                     <p>A Argentina voltou melhor para o terceiro set, impondo dificuldades ao Brasil. Num erro de ataque
                         de Gabi, as hermanas fizeram 5 a 3. Instantes depois foi a vez de Júlia Bergmann atacar para
@@ -204,9 +63,10 @@
                         ponto de Carol. Com a vitória mais que encaminhada, o time verde-amarelo tratou de fechar a
                         partida em 25 a 17.
                     </p>
-                    <img src="Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="propa1">
+                    <img src="CSS/Imagens/propagandas/propaganda-coca.gif" alt="COCA" id="propa1">
                 </div>
-                <img src="Imagens/noticias/basquete3.webp" alt="volei" style="padding-left: 50px; margin-bottom: 10px;">
+                <img src="CSS/Imagens/noticias/basquete3.webp" alt="volei"
+                    style="padding-left: 50px; margin-bottom: 10px;">
             </main>
         </section>
         <div id="rodap">
