--- a/handebol.html
+++ b/handebol.html
@@ -5,157 +5,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="CSS/hand.css">
+        <link rel="shortcut icon" href="Imagens/esportes-com-bolas.png" type="image/x-icon">
         <title>JORNAL ESPORTIVO:</title>
-        <style>
-            #texto {
-                padding-left: 70px;
-                text-align: left;
-                font-size: 20px;
-                color: #000000;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
-            }
-
-            main#conteudo {
-                display: grid;
-                grid-template-columns: 1000px;
-                padding-left: 200px;
-                background-color: aliceblue;
-                text-align: center;
-            }
-
-            #propa {
-                width: 300px;
-                height: 300px;
-                display: inline-block;
-                background-image: url(Imagens/propagandas/propaganda-coca.gif);
-                background-size: 400px 400px;
-                text-decoration: none;
-                border-radius: 15px;
-                margin-left: 50px;
-                margin-top: 20px;
-                padding-left: 20px;
-            }
-
-            div#texto {
-                text-align: left;
-                display: grid;
-                grid-template-columns: 400px auto;
-                padding-left: 100px;
-                background-color: aliceblue;
-                font-size: 20px;
-                color: #000000;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                margin-bottom: 15px;
-            }
-
-            #propa2 {
-                width: 300px;
-                height: 300px;
-                display: inline-block;
-                background-image: url(Imagens/propagandas/propaganda-coca.gif);
-                background-size: 400px 400px;
-                text-decoration: none;
-                border-radius: 15px;
-                margin-left: 100px;
-            }
-
-            #propa1 {
-                width: 400px;
-                height: 400px;
-                display: inline-block;
-                background-image: url(Imagens/propagandas/propaganda-coca.gif);
-                background-size: 500px 500px;
-                text-decoration: none;
-                margin-left: 120px;
-            }
-
-            #propa3 {
-                width: 700px;
-                height: 400px;
-                display: inline-block;
-                text-decoration: none;
-                background-image: url(Imagens/propagandas/propaganda-coca.gif);
-                background-size: 800px 600px;
-                margin-left: 150px;
-            }
-
-            @media screen and (max-width: 856px) {
-                #texto {
-                    padding-left: 70px;
-                    text-align: left;
-                    font-size: 20px;
-                    color: #000000;
-                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
-                }
-
-                main#conteudo {
-                    display: grid;
-                    grid-template-columns: 1000px;
-                    padding-left: 200px;
-                    background-color: aliceblue;
-                    text-align: center;
-                }
-
-                #propa {
-                    width: 300px;
-                    height: 300px;
-                    display: inline-block;
-                    background-image: url(Imagens/propagandas/propaganda-coca.gif);
-                    background-size: 400px 400px;
-                    text-decoration: none;
-                    border-radius: 15px;
-                    margin-left: 50px;
-                    margin-top: 20px;
-                    padding-left: 20px;
-                }
-
-                div#texto {
-                    text-align: left;
-                    display: grid;
-                    grid-template-columns: 400px auto;
-                    padding-left: 100px;
-                    background-color: aliceblue;
-                    font-size: 20px;
-                    color: #000000;
-                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                    margin-bottom: 15px;
-                }
-
-                #propa2 {
-                    width: 300px;
-                    height: 300px;
-                    display: inline-block;
-                    background-image: url(Imagens/propagandas/propaganda-coca.gif);
-                    background-size: 400px 400px;
-                    text-decoration: none;
-                    border-radius: 15px;
-                    margin-left: 100px;
-                }
-
-                #propa1 {
-                    width: 400px;
-                    height: 400px;
-                    display: inline-block;
-                    background-image: url(Imagens/propagandas/propaganda-coca.gif);
-                    background-size: 500px 500px;
-                    text-decoration: none;
-                    margin-left: 120px;
-                }
-
-                #propa3 {
-                    width: 700px;
-                    height: 400px;
-                    display: inline-block;
-                    text-decoration: none;
-                    background-image: url(Imagens/propagandas/propaganda-coca.gif);
-                    background-size: 800px 600px;
-                    margin-left: 150px;
-                }
-            }
-        </style>
     </head>
 
     <body id="body">
@@ -169,23 +21,22 @@
             <li id="A2"><a id="A3" href="basquete.html"><b>BASQUETE</b></a></li>
             <li id="A2"><a id="A3" href="index.html"><b>HOME</b></a></li>
         </ul>
-        <img src="Imagens/banner1.png" alt="banner" id="banner">
+        <img src="CSS/Imagens/banner1.png" alt="banner" id="banner">
         <section>
             <main id="conteudo">
-                <h1 id="tlt" style="padding-left: 80px;"><b>No 1º dia de inscrições, 24 times garantem presença na 17ª
+                <h1 id="tlt"><b>No 1º dia de inscrições, 24 times garantem presença na 17ª
                         Copa TV Tribuna de Handebol Escolar
                     </b></h1>
                 <br>
-                <div id="texto" style="padding-left: 80px; margin-right: 20px;">
-                    <p>OVinte e quatro equipes garantiram um lugar na 17ª Copa TV Tribuna de Handebol Escolar. Elas
+                <div id="texto">
+                    <p>Vinte e quatro equipes garantiram um lugar na 17ª Copa TV Tribuna de Handebol Escolar. Elas
                         confirmaram suas participações no primeiro dia de inscrições, que ocorreu nessa segunda-feira
                         (7). Os colégios têm até esta quarta-feira (9), para ingressarem no torneio desde ano. Do total,
                         12 dos times vão jogar o campeonato masculino. As demais entram em quadra pela
                         categoria feminino.</p>
                     <a href="https://www.cocacolabrasil.com.br/inicial" alt="COCA" id="propa"></a>
                 </div>
-                <img src="Imagens/noticias/handebol1.webp" alt="handebol"
-                    style="margin-top: 30px; margin-bottom: 10px; padding-left: 50px;">
+                <img src="CSS/Imagens/noticias/handebol1.webp" alt="handebol" id="hand">
                 <p id="texto">As instituições que estarão presentes na disputa dos meninos são os colégios Presidente
                     Kennedy, Carmo, Liceu São Paulo, Jean Piaget, Átrio, Integração, Universitas, Novo Tempo e Objetivo
                     Praia Grande, além da UME Professor Doutor Luiz Pieruzzi Netto, da EM Albert Einstein e da EM
@@ -197,8 +48,7 @@
                     EM Albert Einstein e EM Governador Franco Montoro.
 
                 </p>
-                <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                ;"><b>Inscrições</b></h1>
+                <h1 id=tlto><b>Inscrições</b></h1>
                 <div id="texto">
                     <p>Das instituições educacionais que desejarem entrar na Copa precisam encaminhar seus
                         representantes à Liga Regional de Futebol de Salão do Litoral Paulista, situada à Avenida Doutor
