--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="CSS/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Luckiest+Guy&family=Patua+One&family=Roboto+Condensed:ital,wght@0,300;1,300&family=Yeseva+One&display=swap"
-    rel="stylesheet">
-  <title>JORNAL ESPORTIVO: </title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Luckiest+Guy&family=Patua+One&family=Roboto+Condensed:ital,wght@0,300;1,300&family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="Imagens/esportes-com-bolas.png" type="image/x-icon">
+    <title>JORNAL ESPORTIVO: </title>
   <style>
     main#conteudo {
       display: grid;
@@ -27,21 +26,6 @@
 
     }
 
-    @media screen and (max-width: 856px) {
-      main#conteudo {
-        display: grid;
-        grid-template-columns: auto auto;
-
-      }
-
-      main#conteudo2 {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        margin-left: 200px;
-        margin-right: 100px;
-
-      }
-    }
   </style>
 </head>
 
@@ -56,7 +40,7 @@
     <li id="A2"><a id="A3" href="basquete.html"><b>BASQUETE</b></a></li>
     <li id="A2"><a id="A3" href="handebol.html"><b>HANDEBOL</b></a></li>
   </ul>
-  <img src="Imagens/banner1.png" alt="banner" id="banner">
+  <img src="CSS/Imagens/banner1.png" alt="banner" id="banner">
   <section id="container">
     <main id="conteudo">
       <a href="volei.html" id="volêi">
