--- a/volei.html
+++ b/volei.html
@@ -5,122 +5,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="CSS/volei.css">
+        <link rel="shortcut icon" href="Imagens/esportes-com-bolas.png" type="image/x-icon">
         <title>JORNAL ESPORTIVO:</title>
-        <style>
-            #texto {
-                text-align: left;
-                font-size: 20px;
-                color: #000000;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
-            }
-
-            main#conteudo {
-                display: grid;
-                grid-template-columns: 1000px;
-                padding-left: 200px;
-                background-color: aliceblue;
-                text-align: center;
-            }
-
-            #volei {
-                margin-top: 20px;
-                padding-left: 40px;
-            }
-
-            div#texto {
-                text-align: left;
-                display: grid;
-                grid-template-columns: 400px auto;
-                padding-left: 100px;
-                background-color: aliceblue;
-                font-size: 20px;
-                color: #000000;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                margin-bottom: 15px;
-            }
-
-            #propa2 {
-                width: 300px;
-                height: 300px;
-                display: inline-block;
-                background-image: url("Imagens/propagandas/propaganda-coca.gif");
-                background-size: 400px 400px;
-                text-decoration: none;
-                border-radius: 15px;
-                margin-left: 180px;
-            }
-
-            #propa1 {
-                width: 400px;
-                height: 400px;
-                display: inline-block;
-                background-image: url("Imagens/propagandas/propaganda-coca.gif");
-                background-size: 500px 500px;
-                text-decoration: none;
-                border-radius: 15px;
-                margin-left: 120px;
-            }
-
-            @media screen and (max-width: 856px) {
-                #texto {
-                    padding-left: 1%;
-                    text-align: left;
-                    font-size: 20px;
-                    color: #000000;
-                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
-                }
-
-                main#conteudo {
-                    text-align: center;
-                    display: grid;
-                    grid-template-columns: 1000px;
-                    padding-left: 200px;
-                    background-color: #CEF7FA;
-                    text-align: center;
-                }
-
-                #volei {
-                    margin-top: 20px;
-                    padding-left: 40px;
-                }
-
-                div#texto {
-                    text-align: left;
-                    display: grid;
-                    grid-template-columns: auto;
-                    background-color: #CEF7FA;
-                    font-size: 20px;
-                    color: #000000;
-                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                    margin-bottom: 15px;
-                }
-
-                #propa2 {
-                    width: 300px;
-                    height: 300px;
-                    display: inline-block;
-                    background-image: url("Imagens/propagandas/propaganda-coca.gif");
-                    background-size: 300px 300px;
-                    text-decoration: none;
-                    border-radius: 15px;
-                    margin-left: 180px;
-                }
-
-                #propa1 {
-                    width: 400px;
-                    height: 200px;
-                    display: inline-block;
-                    background-image: url("Imagens/propagandas/propaganda-coca.gif");
-                    background-size: 400px 300px;
-                    text-decoration: none;
-                    border-radius: 15px;
-                    margin-left: 100px;
-                }
-            }
-        </style>
     </head>
 
     <body id="body">
@@ -134,12 +21,12 @@
             <li id="A2"><a id="A3" href="handebol.html"><b>HANDEBOL</b></a></li>
             <li id="A2"><a id="A3" href="index.html"><b>HOME</b></a></li>
         </ul>
-        <img src="Imagens/banner1.png" alt="banner" id="banner">
+        <img src="CSS/Imagens/banner1.png" alt="banner" id="banner">
         <section>
             <main id="conteudo">
-                <h1 id="tlt" style="padding-left: 80px;"><b>Seleção da Itália impressiona com jogo de vôlei em
+                <h1 id="tlt"><b>Seleção da Itália impressiona com jogo de vôlei em
                         anfiteatro de gladiadores</b></h1>
-                <p id="texto" style="padding-left: 80px;"><b>Abertura do Europeu de Vôlei Feminino foi disputado a céu
+                <p id="texto"><b>Abertura do Europeu de Vôlei Feminino foi disputado a céu
                         aberto, na
                         Arena de Verona</b> </p>
                 <br>
@@ -151,12 +38,10 @@
                         Geraldão, em Recife-PE. O próximo compromisso das brasileiras no torneio é contra o Peru, na
                         terça-feira, às 20h30. O sportv2 transmite ao vivo.
                         Brasil</p>
-                    <img src="Imagens/noticias/volei.gif" alt="gif" id="volei">
+                    <img src="CSS/Imagens/noticias/volei.gif" alt="gif" id="volei">
                 </div>
-                <img src="Imagens/noticias/volei2.webp" alt="volei" id="volei2"
-                    style="margin-top: 30px; margin-bottom: 10px; padding-left: 50px;">
-                <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                ;"><b>Domínio no 2º set</b></h1>
+                <img src="CSS/Imagens/noticias/volei2.webp" alt="volei" id="volei2">
+                <h1 id="tlt" ><b>Domínio no 2º set</b></h1>
                 <div id="texto">
                     <p>Diferentemente do primeiro set, o Brasil
                         iniciou a segunda parcial melhor em quadra, fazendo 5 a 2.
@@ -167,9 +52,8 @@
                         a 14. A partir de então, coube ao Brasil controlar a partida até fechar o set em 25 a 16.</p>
                     <a href="https://www.cocacolabrasil.com.br/inicial" alt="COCA" id="propa2"></a>
                 </div>
-                <img src="Imagens/noticias/volei3.webp" alt="volei" id="volei2" style="padding-left: 50px;">
-                <h1 id="tlt" style="text-align: left; padding-left: 50px; margin-bottom: 2px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                ;"><b>Argentina tenta reagir</b></h1>
+                <img src="CSS/Imagens/noticias/volei3.webp" alt="volei" id="volei2" style="padding-left: 50px;">
+                <h1 id="tlt"><b>Argentina tenta reagir</b></h1>
                 <div id="texto">
                     <p>A Argentina voltou melhor para o terceiro set, impondo dificuldades ao Brasil. Num erro de ataque
                         de Gabi, as hermanas fizeram 5 a 3. Instantes depois foi a vez de Júlia Bergmann atacar para
@@ -183,7 +67,7 @@
                     </p>
                     <a href="https://www.cocacolabrasil.com.br/inicial" alt="COCA" id="propa1"></a>
                 </div>
-                <img src="Imagens/noticias/volei4.webp" alt="volei" id="volei2" style="padding-left: 50px; margin-bottom: 10px;">
+                <img src="CSS/Imagens/noticias/volei4.webp" alt="volei" id="volei2">
             </main>
         </section>
         <div id="rodap">
